NXP-32054: Optimize thumbnails rendition