@@ -25,6 +25,7 @@ import static org.nuxeo.ecm.core.io.registry.reflect.Priorities.REFERENCE;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.nuxeo.ecm.core.api.CoreSession;
 import org.nuxeo.ecm.core.api.DocumentModel;
@@ -32,6 +33,7 @@ import org.nuxeo.ecm.core.io.marshallers.json.enrichers.AbstractJsonEnricher;
 import org.nuxeo.ecm.core.io.registry.reflect.Setup;
 
 import com.fasterxml.jackson.core.JsonGenerator;
+import org.nuxeo.runtime.api.Framework;
 
 /**
  * Enrich {@link DocumentModel} Json.
@@ -65,11 +67,17 @@ public class ThumbnailJsonEnricher extends AbstractJsonEnricher<DocumentModel> {
 
     public static final String THUMBNAIL_URL_LABEL = "url";
 
+    public static final String SYNC_THUMBNAIL_RENDITION_PROP = "nuxeo.rendition.thumbnail.sync";
+
+    protected final boolean sync;
+
     public static final String THUMBNAIL_URL_PATTERN = "%s/api/v1/repo/%s/id/%s/@rendition/thumbnail?"
-            + CoreSession.CHANGE_TOKEN + "=%s";
+            + CoreSession.CHANGE_TOKEN + "=%s&sync=%b";
 
     public ThumbnailJsonEnricher() {
         super(NAME);
+        // default to sync
+        sync = !Framework.isBooleanPropertyFalse(SYNC_THUMBNAIL_RENDITION_PROP);
     }
 
     @Override
@@ -79,7 +87,7 @@ public class ThumbnailJsonEnricher extends AbstractJsonEnricher<DocumentModel> {
         jg.writeStringField(THUMBNAIL_URL_LABEL,
                 String.format(THUMBNAIL_URL_PATTERN, ctx.getBaseUrl().replaceAll("/$", ""),
                         document.getRepositoryName(), document.getId(),
-                        URLEncoder.encode(defaultString(document.getChangeToken()), "UTF-8")));
+                        URLEncoder.encode(defaultString(document.getChangeToken()), StandardCharsets.UTF_8), sync));
         jg.writeEndObject();
 
     }
